added Users Api request

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <script src="APIManager.js"></script>
+    <script src="Jquery.js"></script>
+    
 
 </head>
 
@@ -29,6 +32,7 @@
             <button>Display User</button>	
         </div>	
     </div>
+    <script src="main.js"></script>
 </body>
 
 </html>
