--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,31 +8,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.4/handlebars.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <script src="APIManager.js"></script>
-    <script src="Jquery.js"></script>
-    
+
+
 
 </head>
 
 <body>
-    <div class="container">	
-        <div class="user-container"></div>	
-        <div class="quote-container"></div>	
-        <div class="content-container">	
-            <div class="pokemon-container"></div>	
-            <div class="meat-container"></div>	
-        </div>	
-        <div class="friends">	
-            <h4>Friends</h4>	
-            <div class="friends-container">	
-            </div>	
-        </div>	
-        <div class="buttons">	
-            <button>Load User Data</button>	
-            <button>Display User</button>	
-        </div>	
+    <script id="user-container" type="text/x-handlebars-template">
+
+            {{#each users}}
+            <div>
+              <img id="profile-pic" src="{{picture}}" >
+              <div class="user-info">{{name.first}} {{name.last}} <br> {{location.city}} , {{location.country}}</div>
+            </div>
+            {{/each}}
+          </script>
+    <script id="friend" type="text/x-handlebars-template">
+            <ul>
+            {{#each users}}
+              <li>{{name.first}} {{name.last}}</li>
+            {{/each}}
+        </ul>
+          </script>
+    <div class="container">
+        <div class="user-container"></div>
+        <div class="quote-container"></div>
+        <div class="content-container">
+            <div class="pokemon-container"></div>
+            <div class="meat-container"></div>
+        </div>
+        <div class="friends">
+            <h4>Friends</h4>
+            <div class="friends-container">
+            </div>
+        </div>
+        <div class="buttons">
+            <button id="load">Load User Data</button>
+            <button id="display">Display User</button>
+        </div>
     </div>
+    <script src="Jquery.js"></script>
+    <script src="APIManager.js"></script>
+    <script src="Renderer.js"></script>
     <script src="main.js"></script>
 </body>
 
