render quote\pokemon\users\friends handelbars added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
             {{/each}}
         </ul>
           </script>
+    <script id="pokemon" type="text/x-handlebars-template">
+              <img id="pokemon-image" src="{{picture}}" >
+                <div id="pokemon-text"> Favorite Pokemon : {{name}}</div>
+          </script>
     <div class="container">
         <div class="user-container"></div>
         <div class="quote-container"></div>
